--- a/templates/Clients/FindFirm.html
+++ b/templates/Clients/FindFirm.html
@@ -50,7 +50,7 @@
         {%if 'client'==di['mode'] %}
 
     <div class="wrapper">
-        <div class="sidebar" data-active-color="rose" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
         Tip 2: you can also add an image using data-image tag
@@ -64,40 +64,52 @@
            
             <div class="sidebar-wrapper">
                 <div class="user">
-                    <div class="photo">
-                        <img src="/static/static2/assets/img/avatardum.png" />
-                    </div>
+                    
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                             {{di["username"]}}
                            
+                       
                         </a>
-                        <div class="collapse" id="collapseExample">
-                            <ul class="nav">
-                                <li>
-                                    <a >{{di["name"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                            </ul>
-                        </div>
+                        
+                        
                     </div>
                 </div>
-                <ul class="nav">
-                    <li>
-                        <a href="#">My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Edit Profile</a>
-                    </li>
-                    <li>
-                    <a href="#">Settings</a>
-                                </li>
-                </ul>
+                <ul class="nav ">
+                            <li>
+                                <a href="{{url_for('FindLawyer')}}" >
+                                  Hire a Lawyer
+                                                                   </a>
+                            </li>
+                            <li class="active">
+                                <a  href="{{url_for('FindFirm')}}" >
+                                  Hire a Firm
+                                                                   </a>
+                            </li>
+                             <li >
+                                <a href="{{url_for('CheckStatus')}}" >
+                                  Check Status
+                                                                   </a>
+                            </li>                            
+                            <li>
+                                <a href="{{url_for('HearingTime')}}" >
+                                  Hearing Time
+                                                                   </a>
+                            </li>                            
+                             <li>
+                                <a href="{{url_for('Documents')}}" >
+                                  Upload Documents
+                                                                   </a>
+                            </li>                            
+                              
+                             <li>
+                                <a href="{{url_for('Payment')}}" >
+                                  Make Payement
+                                                                   </a>
+                            </li>
+                            
+                        </ul>
+                        
             </div>
         </div>
         <div class="main-panel">
@@ -116,45 +128,20 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
+
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                           <li>
-                                <a href="{{url_for('FindLawyer')}}" >
-                                  Hire a Lawyer
-                                                                   </a>
-                            </li>
-                            <li >
-                                <a  href="{{url_for('FindFirm')}}" >
-                                  Hire a Firm
-                                                                   </a>
-                            </li>
-                             <li>
-                                <a href="{{url_for('CheckStatus')}}" >
-                                  Check Status
-                                                                   </a>
-                            </li>                            
-                            <li>
-                                <a href="{{url_for('HearingTime')}}" >
-                                  Hearing Time
-                                                                   </a>
-                            </li>                            
                                                     
-                            <li>
-                                <a href="{{url_for('Documents')}}" >
-                                  Upload Documents
-                                                                   </a>
-                            </li>                         
                                
                              <li>
-                                <a href="{{url_for('Payment')}}" >
-                                  Make Payement
+                                <a href="{{url_for('Account')}}" >
+                                  View Account
                                                                    </a>
                             </li>
                             
                         </ul>
-                        <!-- <form class="navbar-form navbar-right" role="search">
+                        <form class="navbar-form navbar-right" role="search">
                             <div class="form-group form-search is-empty">
                                 <input type="text" class="form-control" placeholder="Search">
                                 <span class="material-input"></span>
@@ -163,8 +150,11 @@
                                 <i class="material-icons">search</i>
                                 <div class="ripple-container"></div>
                             </button>
-                        </form> -->
+                        </form>
+                        
                     </div>
+                        
+                    
                 </div>
             </nav>
             <div class="content">
@@ -399,9 +389,8 @@
                     </div>
                 </div>
                     
-            <footer class="footer">
+           <footer class="footer">
                 <div class="container-fluid">
-                    
                     <p class="copyright pull-right">
                         &copy;
                         <script>
