--- a/templates/Judge/AnnounceVerdict.html
+++ b/templates/Judge/AnnounceVerdict.html
@@ -4,6 +4,43 @@
 
 <!-- Mirrored from demos.creative-tim.com/material-dashboard-pro/examples/dashboard.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Mar 2017 21:29:18 GMT -->
 <head>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+    var myVar = setInterval(myTimer1, 1000);
+
+    function myTimer1() 
+    {
+        var d=document.getElementById('success-msg');
+        console.log(d);
+        if (d!=null)
+        {
+            swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-danger" });
+            clearInterval(myVar);
+            var a = document.createElement('a');
+            a.href ="{{url_for('Cases')}}";  
+            setTimeout(function(){a.click()},2000);
+        }
+    }
+</script>
+ <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+    var myVar1 = setInterval(myTimer, 1000);
+
+    function myTimer() 
+    {
+        var d=document.getElementById('error-msg');
+        //console.log(d);
+        if (d!=null)
+        {
+            swal({ title:"Opps!", text: "Something went wrong!", type: "error", buttonsStyling: false, confirmButtonClass: "btn btn-danger" });
+            clearInterval(myVar1);
+            var a = document.createElement('a');
+            a.href ="{{url_for('Cases')}}";  
+            setTimeout(function(){a.click()},2000);
+            // setTimeout(a.click(), 4000);
+        }
+    }
+</script>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="/static/static2/assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="/static/static2/assets/img/favicon.png" />
@@ -49,8 +86,8 @@
 <body>
         {%if 'judge'==di['mode'] %}
 
-    <div class="wrapper">
-        <div class="sidebar" data-active-color="rose" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
+     <div class="wrapper">
+        <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
         Tip 2: you can also add an image using data-image tag
@@ -64,62 +101,18 @@
            
             <div class="sidebar-wrapper">
                 <div class="user">
-                    <div class="photo">
-                        <img src="/static/static2/assets/img/avatardum.png" />
-                    </div>
+                    
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                             {{di["username"]}}
+                           
+                       
                         </a>
-                        <div class="collapse" id="collapseExample">
-                            <ul class="nav">
-                                <li>
-                                    <a >{{di["name"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                            </ul>
-                        </div>
+                        
+                        
                     </div>
                 </div>
-                <ul class="nav">
-                    <li>
-                        <a href="#">My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Edit Profile</a>
-                    </li>
-                    <li>
-                    <a href="#">Settings</a>
-                                </li>
-                </ul>
-                
-            </div>
-        </div>
-        <div class="main-panel">
-            <nav class="navbar navbar-transparent navbar-absolute">
-                <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
-                    </div>
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-right">
+                <ul class="nav ">
                                     <li >
                                         <a  href="{{url_for('PreviousJudgements')}}" >
                                           Previous Judgements
@@ -140,7 +133,7 @@
                                     
                                     
                                     
-                                    <li>
+                                    <li class="active">
                                         <a href="{{url_for('Cases')}}" >
         
                                         
@@ -148,9 +141,42 @@
                                          </a>
                                     </li>
                                     
-                                </ul>
+                            
+                            
+                        </ul>
+                        
+            </div>
+        </div>
+        <div class="main-panel">
+            <nav class="navbar navbar-transparent navbar-absolute">
+                <div class="container-fluid">
+                    <div class="navbar-minimize">
+                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
+                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
+                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
+                        </button>
+                    </div>
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                                                    
                                
-                               <!--  <form class="navbar-form navbar-right" role="search">
+                             <li>
+                                <a href="{{url_for('Account')}}" >
+                                  View Account
+                                                                   </a>
+                            </li>
+                            
+                        </ul>
+                        <form class="navbar-form navbar-right" role="search">
                             <div class="form-group form-search is-empty">
                                 <input type="text" class="form-control" placeholder="Search">
                                 <span class="material-input"></span>
@@ -159,13 +185,16 @@
                                 <i class="material-icons">search</i>
                                 <div class="ripple-container"></div>
                             </button>
-                        </form> -->
+                        </form>
+                        
                     </div>
+                        
+                    
                 </div>
             </nav>
-            <div class="content">
+           <div class="content">
                 <div class="container-fluid">
-                     {%if message is defined%}
+                     {%if message !='SUCCESS'%}
                     <div class="row">
                         <div class="col-md-12">
                             <div class="card">
@@ -280,39 +309,20 @@
                    </div>
                </div>
                     </div>
-                    
+                          {% if message=="SUCCESS" %}
+<div id="success-msg"></div>                   
+{% endif %}
+{% if message=="ERROR" %}
+<div id="error-msg"></div>                   
+{% endif %}
             <footer class="footer">
                 <div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
                     <p class="copyright pull-right">
                         &copy;
                         <script>
                             document.write(new Date().getFullYear())
                         </script>
-                        <a href="http://www.creative-tim.com/">Creative Tim</a>, made with love for a better web
+                        HONOUR, made with love for a better web
                     </p>
                 </div>
             </footer>
