--- a/templates/Lawfirm/LawyerPerf.html
+++ b/templates/Lawfirm/LawyerPerf.html
@@ -49,7 +49,7 @@
 <body>
 	{%if 'law firm'==di['mode'] %}
     <div class="wrapper">
-        <div class="sidebar" data-active-color="rose" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
+        <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
         Tip 2: you can also add an image using data-image tag
@@ -63,62 +63,18 @@
            
             <div class="sidebar-wrapper">
                 <div class="user">
-                    <div class="photo">
-                        <img src="/static/static2/assets/img/avatardum.png" />
-                    </div>
+                    
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                             {{di["username"]}}
+                           
+                       
                         </a>
-                        <div class="collapse" id="collapseExample">
-                            <ul class="nav">
-                                <li>
-                                    <a >{{di["name"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                            </ul>
-                        </div>
+                        
+                        
                     </div>
                 </div>
-                <ul class="nav">
-                	<li>
-                        <a href="#">My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Edit Profile</a>
-                    </li>
-                    <li>
-                    <a href="#">Settings</a>
-                                </li>
-                </ul>
-                
-            </div>
-        </div>
-        <div class="main-panel">
-            <nav class="navbar navbar-transparent navbar-absolute">
-                <div class="container-fluid">
-                    <div class="navbar-minimize">
-                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
-                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
-                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
-                        </button>
-                    </div>
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
-                    </div>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
+                <ul class="nav ">
                             <li >
                                 <a  href="{{url_for('FirmLawyers')}}" >
                                   Associated Lawyers
@@ -139,18 +95,63 @@
                                   Check Firm Earnings wrt Clients/Lawyers
                                                                    </a>
                             </li>
-                             <li>
+                             <li class="active">
                                 <a href="{{url_for('WinLose')}}" >
                                   Total Wins/Loses
                                                                    </a>
                             </li>                                                        
+                                                
+                            
                         </ul>
                         
+            </div>
+        </div>
+        <div class="main-panel">
+            <nav class="navbar navbar-transparent navbar-absolute">
+                <div class="container-fluid">
+                    <div class="navbar-minimize">
+                        <button id="minimizeSidebar" class="btn btn-round btn-white btn-fill btn-just-icon">
+                            <i class="material-icons visible-on-sidebar-regular">more_vert</i>
+                            <i class="material-icons visible-on-sidebar-mini">view_list</i>
+                        </button>
                     </div>
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                                                    
+                               
+                             <li>
+                                <a href="{{url_for('Account')}}" >
+                                  View Account
+                                                                   </a>
+                            </li>
+                            
+                        </ul>
+                        <form class="navbar-form navbar-right" role="search">
+                            <div class="form-group form-search is-empty">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="material-input"></span>
+                            </div>
+                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                                <i class="material-icons">search</i>
+                                <div class="ripple-container"></div>
+                            </button>
+                        </form>
+                        
+                    </div>
+                        
+                    
                 </div>
             </nav>
-
-            
+           
             <div class="content">
                 <div class="container-fluid">
 
