--- a/templates/Lawyer/ActivePending.html
+++ b/templates/Lawyer/ActivePending.html
@@ -48,8 +48,8 @@
 
 <body>
 	{%if 'lawyer'==di['mode'] %}
-    <div class="wrapper">
-        <div class="sidebar" data-active-color="rose" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
+   <div class="wrapper">
+        <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
         Tip 2: you can also add an image using data-image tag
@@ -63,40 +63,52 @@
            
             <div class="sidebar-wrapper">
                 <div class="user">
-                    <div class="photo">
-                        <img src="/static/static2/assets/img/avatardum.png" />
-                    </div>
+                    
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                             {{di["username"]}}
+                           
+                       
                         </a>
-                        <div class="collapse" id="collapseExample">
-                            <ul class="nav">
-                                <li>
-                                    <a >{{di["name"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                            </ul>
-                        </div>
+                        
+                        
                     </div>
                 </div>
-                <ul class="nav">
-                	<li>
-                        <a href="#">My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Edit Profile</a>
-                    </li>
-                    <li>
-                    <a href="#">Settings</a>
-                                </li>
-                </ul>
-                
+                <ul class="nav ">
+                            <li >
+                                <a  href="{{url_for('ClientRequests')}}" >
+                                  Client Requests
+                                                                   </a>
+                            </li>
+                            <li >
+                                <a  href="{{url_for('FileCase')}}" >
+                                  File A Case
+                                                                   </a>
+                            </li>
+                             <li >
+                                <a  href="{{url_for('ActivePending')}}" >
+                                  Active/Pending Cases
+                                                                   </a>
+                            </li>
+                             <li class="active">
+                                <a href="{{url_for('Schedule')}}" >
+                                  Schedule For The Day
+                                                                   </a>
+                            </li>                            
+                            <li>
+                                <a href="{{url_for('CaseHistory')}}" >
+                                  Check Case History
+                                                                   </a>
+                            </li>
+                             <li>
+                                <a href="{{url_for('RequestPayment')}}" >
+                                  Request Payement
+                                                                   </a>
+                            </li>
+                            
+                            
+                        </ul>
+                        
             </div>
         </div>
         <div class="main-panel">
@@ -115,47 +127,36 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
+
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li >
-                                <a  href="{{url_for('ClientRequests')}}" >
-                                  Client Requests
-                                                                   </a>
-                            </li>
-                            <li >
-                                <a  href="{{url_for('FileCase')}}" >
-                                  File A Case
-                                                                   </a>
-                            </li>
-                             <li >
-                                <a  href="{{url_for('ActivePending')}}" >
-                                  Active/Pending Cases
-                                                                   </a>
-                            </li>
+                                                    
+                               
                              <li>
-                                <a href="{{url_for('Schedule')}}" >
-                                  Schedule For The Day
-                                                                   </a>
-                            </li>                            
-                            <li>
-                                <a href="{{url_for('CaseHistory')}}" >
-                                  Check Case History
-                                                                   </a>
-                            </li>
-                             <li>
-                                <a href="{{url_for('RequestPayment')}}" >
-                                  Request Payement
+                                <a href="{{url_for('Account')}}" >
+                                  View Account
                                                                    </a>
                             </li>
                             
                         </ul>
+                        <form class="navbar-form navbar-right" role="search">
+                            <div class="form-group form-search is-empty">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="material-input"></span>
+                            </div>
+                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                                <i class="material-icons">search</i>
+                                <div class="ripple-container"></div>
+                            </button>
+                        </form>
+                        
                     </div>
+                        
+                    
                 </div>
             </nav>
-
-            
+           
             <div class="content">
                 <div class="container-fluid">
 
