--- a/templates/Loginnew.html
+++ b/templates/Loginnew.html
@@ -47,6 +47,15 @@
 </head>
 
 <body>
+      {%if message is defined%}
+                        <script>
+    function myFunction() {
+    alert("{{message}}");
+    }
+                        window.myFunction();
+
+                    </script>
+                            {% endif%}
     <nav class="navbar navbar-primary navbar-transparent navbar-absolute">
         <div class="container">
             <div class="navbar-header">
@@ -56,20 +65,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../dashboard.html">Material Dashboard Pro</a>
+               
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     
-                    <li class="">
-                        <a href="Registeras">
+                    <li class="active">
+                        <a href="{{ url_for('Registeras')}}">
                             <i class="material-icons">person_add</i> Register
                         </a>
                     </li>
                    
-                    <li class="active">
-                        <a href="Login">
-                            <i class="material-icons">lock_open</i> Lock
+                    <li class="">
+                        <a href="{{ url_for('Login')}}">
+                            <i class="material-icons">lock_open</i> Login
                         </a>
                     </li>
                 </ul>
@@ -83,7 +92,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-4 col-sm-6 col-md-offset-4 col-sm-offset-3">
-                            <form method="#" action="#">
+                            <form method="post" action="#">
                                 <div class="card card-login card-hidden">
                                     <div class="card-header text-center" data-background-color="rose">
                                         <h4 class="card-title">Login</h4>
@@ -97,7 +106,7 @@
                                             </span>
                                             <div class="form-group label-floating">
                                                 <label class="control-label">User Name</label>
-                                                <input type="text" class="form-control">
+                                                <input type="text" name="username" class="form-control" required="">
                                             </div>
                                         </div>
                                        
@@ -107,7 +116,7 @@
                                             </span>
                                             <div class="form-group label-floating">
                                                 <label class="control-label">Password</label>
-                                                <input type="password" class="form-control">
+                                                <input type="password" name="password"class="form-control" required="">
                                             </div>
                                         </div>
                                     </div>
