--- a/templates/Officer/SetHearing.html
+++ b/templates/Officer/SetHearing.html
@@ -4,6 +4,24 @@
 
 <!-- Mirrored from demos.creative-tim.com/material-dashboard-pro/examples/dashboard.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Mar 2017 21:29:18 GMT -->
 <head>
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+    var myVar = setInterval(myTimer1, 1000);
+
+    function myTimer1() 
+    {
+        var d=document.getElementById('success-msg');
+        console.log(d);
+        if (d!=null)
+        {
+            swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-danger" });
+            clearInterval(myVar);
+            var a = document.createElement('a');
+            a.href ="";  
+            setTimeout(function(){a.click()},2000);
+        }
+    }
+</script>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="76x76" href="/static/static2/assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="/static/static2/assets/img/favicon.png" />
@@ -64,8 +82,8 @@
 
 <body>
 	{%if 'officer'==di['mode'] %}
-    <div class="wrapper">
-        <div class="sidebar" data-active-color="rose" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
+   <div class="wrapper">
+        <div class="sidebar" data-active-color="magic" data-background-color="black" data-image="/static/static2/assets/img/sidebar-1.jpg">
             <!--
         Tip 1: You can change the color of active element of the sidebar using: data-active-color="purple | blue | green | orange | red | rose"
         Tip 2: you can also add an image using data-image tag
@@ -79,40 +97,53 @@
            
             <div class="sidebar-wrapper">
                 <div class="user">
-                    <div class="photo">
-                        <img src="/static/static2/assets/img/avatardum.png" />
-                    </div>
+                    
                     <div class="info">
                         <a data-toggle="collapse" href="#collapseExample" class="collapsed">
                             {{di["username"]}}
+                           
+                       
                         </a>
-                        <div class="collapse" id="collapseExample">
-                            <ul class="nav">
-                                <li>
-                                    <a >{{di["name"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                                <li>
-                                    <a >{{di["username"]}}</a>
-                                </li>
-                            </ul>
-                        </div>
+                        
+                        
                     </div>
                 </div>
-                <ul class="nav">
-                	<li>
-                        <a href="#">My Profile</a>
-                    </li>
-                    <li>
-                        <a href="#">Edit Profile</a>
-                    </li>
-                    <li>
-                    <a href="#">Settings</a>
-                                </li>
-                </ul>
-                
+                <ul class="nav ">
+                            <li >
+                                <a  href="{{url_for('FileFIR')}}" >
+                                  File FIR
+                                                                   </a>
+                            </li>
+                             <li class="active">
+                                <a  href="{{url_for('SetHearing')}}" >
+                                  Set Hearing
+                                                                   </a>
+                            </li>
+                             <li>
+                                <a href="{{url_for('ScheduleOfficer')}}" >
+                                  Schedule For The Day
+                                                                   </a>
+                            </li>                            
+                            <li>
+                                <a href="{{url_for('DocUploadStatus')}}" >
+                                  Document Upload Status
+                                                                   </a>
+                            </li>
+                            <li >
+                                <a href="{{url_for('CaseStatements')}}" >
+                                 Update Case Statements
+                                                                   </a>
+                            </li>
+                            <li>
+                                <a href="{{url_for('ViewDocuments')}}" >
+                                     View Case Related Documents
+                                                                   </a>
+                            </li>
+                                                                                 
+                                                
+                            
+                        </ul>
+                        
             </div>
         </div>
         <div class="main-panel">
@@ -131,48 +162,36 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{url_for('Home')}}"> Dashboard </a>
+                        
                     </div>
                     <div class="collapse navbar-collapse">
-                         <ul class="nav navbar-nav navbar-right">
-                            <li >
-                                <a  href="{{url_for('FileFIR')}}" >
-                                  File FIR
-                                                                   </a>
-                            </li>
-                             <li >
-                                <a  href="{{url_for('SetHearing')}}" >
-                                  Set Hearing
-                                                                   </a>
-                            </li>
+                        <ul class="nav navbar-nav navbar-right">
+                                                    
+                               
                              <li>
-                                <a href="{{url_for('ScheduleOfficer')}}" >
-                                  Schedule For The Day
-                                                                   </a>
-                            </li>                            
-                            <li>
-                                <a href="{{url_for('DocUploadStatus')}}" >
-                                  Document Upload Status
+                                <a href="{{url_for('Account')}}" >
+                                  View Account
                                                                    </a>
                             </li>
-                            <li>
-                                <a href="{{url_for('CaseStatements')}}" >
-                                 Update Case Statements
-                                                                   </a>
-                            </li>
-                            <li>
-                                <a href="{{url_for('ViewDocuments')}}" >
-                                     View Case Related Documents
-                                                                   </a>
-                            </li>
-                            
                             
                         </ul>
-                                         
-                     </div>
+                        <form class="navbar-form navbar-right" role="search">
+                            <div class="form-group form-search is-empty">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="material-input"></span>
+                            </div>
+                            <button type="submit" class="btn btn-white btn-round btn-just-icon">
+                                <i class="material-icons">search</i>
+                                <div class="ripple-container"></div>
+                            </button>
+                        </form>
+                        
+                    </div>
+                        
+                    
                 </div>
             </nav>
-
+    
             
             <div class="content">
                 <div class="container-fluid">
@@ -243,41 +262,7 @@
                 
                 
 
-            <footer class="footer">
-                <div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <p class="copyright pull-right">
-                        &copy;
-                        <script>
-                            document.write(new Date().getFullYear())
-                        </script>
-                        <a href="http://www.creative-tim.com/">Creative Tim</a>, made with love for a better web
-                    </p>
-                </div>
-            </footer>
+           
         </div>
     </div>
   
