lawyer pages are now login compatible

--- a/templates/Lawyer/RequestPayment.html
+++ b/templates/Lawyer/RequestPayment.html
@@ -182,7 +182,7 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-content">
-                                <h4 class="card-title">No Client To Pay!</h4>
+                                <h4 class="card-title">No Pending Client To Request Payment!</h4>
                             </div>
                         </div>
                     </div>
@@ -244,16 +244,6 @@
                                     <h4 class="card-title">Request For Payment</h4>
                                     <div class="row">
                                         <form id="TypeValidation" class="form-horizontal" action="/Lawyer/RequestPayment" method="POST">
-                                
-                                            
-                                            
-                                            <div class="col-sm-8">
-                                                <div class="row"> 
-                                                    <div class="form-group label-floating">    
-                                                        <input class="form-control" type="number" placeholder="Enter Your Lawyer ID" name="LawyerID">
-                                                    </div>
-                                                </div>
-                                            </div>
 
                                             <div class="col-sm-8">
                                                 <div class="row"> 
