--- a/templates/Lawfirm/FirmEarn.html
+++ b/templates/Lawfirm/FirmEarn.html
@@ -165,13 +165,6 @@
                                     <h4 class="card-title">Get Earnings Grouped By Client/Lawyer ID</h4>
                                     <div class="row">
                                         <form id="TypeValidation" class="form-horizontal" action="/Lawfirm/FirmEarn" method="POST">
-                                            <div class="col-sm-8">
-                                                <div class="row"> 
-                                                    <div class="form-group label-floating">    
-                                                        <input class="form-control" type="number" placeholder="Enter Firm ID" name="FirmID">
-                                                    </div>
-                                                </div>
-                                            </div>
                                             
                                             <div class="col-sm-8">
                                                 <div class="row"> 
@@ -200,7 +193,7 @@
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">Enter Required Info To Continue</h4>
+                                     <h4 class="card-title">Enter Start Date To Continue</h4>
                                  </div>
                              </div>
                          </div>
@@ -248,7 +241,7 @@
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">Enter Required Info To Continue</h4>
+                                     <h4 class="card-title">Enter Start Date To Continue</h4>
                                  </div>
                              </div>
                          </div>
@@ -262,7 +255,7 @@
                                  <div class="card-content">
                                      <h4 class="card-title">Lawyer Wise Data</h4>
                                      <div class="row">
-                                         <div class="col-md-10">
+                                         <div class="col-md-12">
                                              <div class="table-responsive table-sales">
                                                  <table class="table">
                                                      <tbody class="text-center">
