--- a/templates/Lawfirm/FirmLawyers.html
+++ b/templates/Lawfirm/FirmLawyers.html
@@ -156,40 +156,12 @@
             <div class="content">
                 <div class="container-fluid">
 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="card-content">
-                                    <div class="row">
-                                        <form id="TypeValidation" class="form-horizontal" action="/Lawfirm/FirmLawyers" method="POST">
-                                            <div class="col-sm-8">
-                                                <div class="row"> 
-                                                    <div class="form-group label-floating">    
-                                                        <input class="form-control" type="number" placeholder="Enter Firm ID" name="FirmID">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="col-sm-8">
-                                                <div class="row">
-                                                    <button type="submit" class="btn btn-rose btn-fill">Submit</button>
-                                                </div>
-                                            </div>                                            
-
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
                  {%if lawyers==[] %}
                  <div class="row">
                          <div class="col-md-12">
                              <div class="card">
                                  <div class="card-content">
-                                     <h4 class="card-title">Enter FirmID to continue</h4>
+                                     <h4 class="card-title">No Lawyers Associated Yet</h4>
                                  </div>
                              </div>
                          </div>
