--- a/templates/Clients/FindFirm.html
+++ b/templates/Clients/FindFirm.html
@@ -207,7 +207,7 @@
                                                             </td>
                                                             
                                                         </tr>
-                                                        {% for lr in FirmSearch %}
+                                                        {% for lr in Firmcurrent %}
                                                         <tr>
                                                             <td>{{lr.ID}}</td>
                                                             <td >
