--- a/templates/Lawyer/LawyerAccount.html
+++ b/templates/Lawyer/LawyerAccount.html
@@ -303,7 +303,7 @@
                                             </div>
                                        
                                         </div>
-                                        {%if Pc.FirmID!=""%}
+                                        {%if Pc.FirmID!=None%}
                                         <div class="row"> 
                                             
                                         <div class="col-sm-6 ">
