--- a/templates/Register.html
+++ b/templates/Register.html
@@ -180,13 +180,13 @@
                                             <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>Source of Appoitment</label>
-                                                <input type="text" class="form-control" name="ed"required="">
+                                                <input type="text" class="form-control" name="src"required="">
                                                 </div>
                                             </div>
                                              <div class="input-group row-md-8 ">
                                                 <div class="form-group label-floating">
                                                     <label>Date of Appointment</label>
-                                                <input type="text" class="form-control" name="doa"required="">
+                                                <input type="date" class="form-control" name="doa"required="">
                                                 </div>
                                             </div>
                                             {% endif %}
